[workspace]
resolver = "3"
members = ["src/*"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.11.0"
homepage = "https://github.com/ufoscout/ic_mple"
repository = "https://github.com/ufoscout/ic_mple"
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[workspace.dependencies]
ic_mple_client = { path = "src/ic_mple_client", version = "0.11.0" }
ic_mple_log = { path = "src/ic_mple_log", version = "0.11.0" }
ic_mple_permissions = { path = "src/ic_mple_permissions", version = "0.11.0" }
ic_mple_pocket_ic = { path = "src/ic_mple_pocket_ic", version = "0.11.0" }
ic_mple_utils = { path = "src/ic_mple_utils", version = "0.11.0" }

arc-swap = "1.6"
candid = { version = "0.10" }
env_filter = "0.1.1"
flate2 = "1"
humantime = { version = "2", default-features = false }
ic-agent = "0.44"
ic-cdk = "0.18"
ic-stable-structures = "0.7"
log = "0.4"
pocket-ic = "9.0.2"
reqwest = { version = "0.12", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
ringbuffer = "0.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false }
