[workspace]
resolver = "3"
members = ["src/*"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.16.1"
homepage = "https://github.com/ufoscout/ic_mple"
repository = "https://github.com/ufoscout/ic_mple"
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[workspace.dependencies]
ic_mple_client = { path = "src/ic_mple_client", version = "0.16.1" }
ic_mple_log = { path = "src/ic_mple_log", version = "0.16.1" }
ic_mple_permissions = { path = "src/ic_mple_permissions", version = "0.16.1" }
ic_mple_pocket_ic = { path = "src/ic_mple_pocket_ic", version = "0.16.1" }
ic_mple_scheduler = { path = "src/ic_mple_scheduler", version = "0.16.1" }
ic_mple_structures = { path = "src/ic_mple_structures", version = "0.16.1" }
ic_mple_utils = { path = "src/ic_mple_utils", version = "0.16.1" }

arc-swap = "1.8"
candid = { version = "0.10" }
env_filter = "0.1.1"
flate2 = "1"
humantime = { version = "2", default-features = false }
ic-agent = "0.45"
ic-cdk = "0.19"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7"
log = "0.4"
pocket-ic = "11.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
ringbuffer = "0.16"
serde = { version = "1.0", features = ["derive"] }
schnellru = { version = "0.2", default-features = false }
thiserror = "2"
tokio = { version = "1", default-features = false }
