[package]
name = "ic_mple_auth"
description = "Generic service for managing user authorization and permissions in the Internet Computer" 

edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["IC", "internet-computer", "authorization", "permissions"]

[dependencies]
candid = { workspace = true }
log = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic_mple_utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }