[package]
name = "ic_mple_log"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

description = """A logging implementation for `log` in IC"""
keywords = ["IC", "PocketIC", "internet-computer"]

[dependencies]
arc-swap = { workspace = true }
candid = { workspace = true }
env_filter = { workspace = true }
log = { workspace = true, features = ["std"] }
ic-cdk = { workspace = true }
ic_mple_utils = { workspace = true }
serde = { workspace = true }

# Enables rfc3339 time format in logs
# Without this, timestamps will be printed as timestamp in nanoseconds
humantime = { workspace = true, optional = true }

# Required for the `service` feature
ic-stable-structures = { workspace = true, optional = true }

ringbuffer = { workspace = true }


[features]
default = ["humantime"]
humantime = ["dep:humantime"]
service = ["ic-stable-structures"]