[package]
name = "ic_mple_permissions"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["IC", "internet-computer", "permissions"]

[dependencies]
candid = { workspace = true }
log = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic_mple_utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }