[package]
name = "ic_mple_pocket_ic"
description = "Simple utils to automatically download and install the Internet Computer Pocket IC Server from a test" 

license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["IC", "PocketIC", "internet-computer"]

[dependencies]
flate2 = { workspace = true }
log = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }