[package]
name = "ic_mple_scheduler"
description = "Generic service for scheduling tasks in the Internet Computer"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["IC", "internet-computer", "scheduler"]

[dependencies]
bincode = "1"

candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic_mple_structures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
ic_mple_client = { workspace = true, features = ["pocket-ic"]}
ic_mple_pocket_ic = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

