[package]
name = "ic_mple_structures"
description = "High level structure based on ic-stable-structures"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["IC", "internet-computer", "stable-structures"]

[dependencies]
candid = { workspace = true }
ic-stable-structures = { workspace = true }
schnellru = { workspace = true, optional = true }

[features]
default = []
cached = ["schnellru"]

[dev-dependencies]
candid = { workspace = true }
serde = { workspace = true }