[package]
name = "ic_mple_utils"
description = "Few utils for the ic_mple project"

edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["IC", "PocketIC", "internet-computer"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []

# Enables a tokio based implementation of the IC API for testing
ic_mock = ["tokio"]

